[package]
name = "helix-gpui"
edition = "2021"
authors = ["Alexander Polakov <alex@plhk.dev>"]
description = "A post-modern text editor."
include = ["src/**/*", "README.md"]
default-run = "hxg"
version = "0.0.1"
license = "MPL-2.0"

[features]
default = ["git"]
unicode-lines = ["helix-core/unicode-lines"]
integration = ["helix-event/integration_test"]
git = ["helix-vcs/git"]

[[bin]]
name = "hxg"
path = "src/main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }

helix-stdx = { git = "https://github.com/helix-editor/helix" }
helix-core = { git = "https://github.com/helix-editor/helix" }
helix-event = { git = "https://github.com/helix-editor/helix" }
helix-view = { git = "https://github.com/helix-editor/helix" }
helix-lsp = { git = "https://github.com/helix-editor/helix" }
# helix-dap = { git = "https://github.com/helix-editor/helix" }
helix-vcs = { git = "https://github.com/helix-editor/helix" }
helix-loader = { git = "https://github.com/helix-editor/helix" }
helix-term = { git = "https://github.com/helix-editor/helix" }
tui = { git = "https://github.com/helix-editor/helix", package = "helix-tui", default-features = false }

anyhow = "1"
once_cell = "1.19"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
crossterm = { version = "0.27", features = ["event-stream"] }
signal-hook = "0.3"
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
arc-swap = { version = "1.7.1" }
termini = "1"

# Logging
fern = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"

# File picker
nucleo = "0.2"
ignore = "0.4"
# markdown doc rendering
pulldown-cmark = { version = "0.10", default-features = false }
# file type detection
content_inspector = "0.2.4"

# opening URLs
open = "5.1.2"
url = "2.5.0"

# config
toml = "0.8"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# ripgrep for global search
grep-regex = "0.1.12"
grep-searcher = "0.1.13"

[target.'cfg(not(windows))'.dependencies]  # https://github.com/vorner/signal-hook/issues/100
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
libc = "0.2.153"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.27", features = ["event-stream", "use-dev-tty"] }

[build-dependencies]
helix-loader = { git = "https://github.com/helix-editor/helix" }

[dev-dependencies]
smallvec = "1.13"
indoc = "2.0.5"
tempfile = "3.10.1"
