[package]
name = "helix-gpui"
edition = "2021"
authors = ["Alexander Polakov <alex@plhk.dev>", "Blaž Hrastnik <blaz@mxxn.io>"]
description = "A post-modern text editor."
include = ["src/**/*", "README.md"]
default-run = "hxg"
version = "0.0.1"
license = "MPL-2.0"

[features]
default = ["git"]
unicode-lines = ["helix-core/unicode-lines"]
integration = ["helix-event/integration_test"]
git = ["helix-vcs/git"]

[[bin]]
name = "hxg"
path = "src/main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }

helix-stdx = { git = "https://github.com/polachok/helix", rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }
helix-core = { git = "https://github.com/polachok/helix", rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }
helix-event = { git = "https://github.com/polachok/helix" , rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }
helix-view = { git = "https://github.com/polachok/helix" , rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }
helix-lsp = { git = "https://github.com/polachok/helix" , rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }
# helix-dap = { git = "https://github.com/polachok/helix" }
helix-vcs = { git = "https://github.com/polachok/helix" , rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }
helix-loader = { git = "https://github.com/polachok/helix" , rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }
helix-term = { git = "https://github.com/polachok/helix" , rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }
tui = { git = "https://github.com/polachok/helix", package = "helix-tui", default-features = false,  rev = "31651eab32b4a950a2dd86c6b30f1f7b3c854979" }

anyhow = "1"
once_cell = "1.19"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
crossterm = { version = "0.27", features = ["event-stream"] }
signal-hook = "0.3"
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
arc-swap = { version = "1.7.1" }
termini = "1"

# Logging
fern = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"

# File picker
nucleo = "0.2"
ignore = "0.4"
# markdown doc rendering
pulldown-cmark = { version = "0.10", default-features = false }
# file type detection
content_inspector = "0.2.4"

# opening URLs
open = "5.1.2"
url = "2.5.0"

# config
toml = "0.8"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# ripgrep for global search
grep-regex = "0.1.12"
grep-searcher = "0.1.13"    
